fix product overlapping issue

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -95,19 +95,18 @@ body{
     animation: fade-up 1s;
 }
 .col-section{
-    height: 35rem;
-    background-color: transparent;
-    perspective: 1000px;
+    perspective: 500px;
 }
 .card-wrapper{
-    position: relative;
-    transition: transform 0.8s;
+    display: grid;
     transform-style: preserve-3d;
+    transition-timing-function: ease-in-out;
+    transition: 0.8s;
 }
 .face{
-    position: absolute !important;
     width: 100%;
-    height: 100%;
+    grid-row: 1/2;
+    grid-column: 1/2;
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
 }
@@ -122,8 +121,6 @@ body{
     background-color: $secondary;
 }
 .card{
-    margin-bottom: 1rem;
-    
     .cta-links{
         display: flex;
         justify-content: space-around;
@@ -196,6 +193,20 @@ body{
 }
 
 @import "../node_modules/bootstrap/scss/bootstrap";
+.col-section{
+    position: relative;
+    height: auto;
+    background-color: transparent;
+    perspective: 1000px;
+    
+    // @include media-breakpoint-up(sm){
+    //     height: 35rem;
+    // }
+
+    // @include media-breakpoint-up(lg){
+    //     height: 30rem;
+    // }
+}
 /* Option 2: Import via CSS */
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@500&display=swap');
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css");
